[gd_scene load_steps=36 format=2]

[ext_resource path="res://Entity/Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Boss.gd" type="Script" id=2]
[ext_resource path="res://Resources/Monsters/boss.png" type="Texture" id=3]
[ext_resource path="res://Resources/xirod.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Resources/Explosion_blue_oval/Explosion_blue_oval5.png" type="Texture" id=5]
[ext_resource path="res://Resources/Explosion_blue_oval/Explosion_blue_oval6.png" type="Texture" id=6]
[ext_resource path="res://Resources/Explosion_blue_oval/Explosion_blue_oval1.png" type="Texture" id=7]
[ext_resource path="res://Resources/Explosion_blue_oval/Explosion_blue_oval2.png" type="Texture" id=8]
[ext_resource path="res://Resources/Explosion_blue_oval/Explosion_blue_oval3.png" type="Texture" id=9]
[ext_resource path="res://Resources/Explosion_blue_oval/Explosion_blue_oval4.png" type="Texture" id=10]
[ext_resource path="res://Resources/Explosion_blue_oval/Explosion_blue_oval7.png" type="Texture" id=11]
[ext_resource path="res://Resources/Explosion_blue_oval/Explosion_blue_oval8.png" type="Texture" id=12]
[ext_resource path="res://Resources/Explosion_blue_oval/Explosion_blue_oval9.png" type="Texture" id=13]
[ext_resource path="res://Resources/Explosion_blue_oval/Explosion_blue_oval10.png" type="Texture" id=14]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle5.png" type="Texture" id=15]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle2.png" type="Texture" id=16]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle7.png" type="Texture" id=17]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle8.png" type="Texture" id=18]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle3.png" type="Texture" id=19]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle10.png" type="Texture" id=20]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle1.png" type="Texture" id=21]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle4.png" type="Texture" id=22]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle6.png" type="Texture" id=23]
[ext_resource path="res://Resources/DeathAnimations/BlueCircleExplosions/Explosion_blue_circle9.png" type="Texture" id=24]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 50.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 18.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 15 ), ExtResource( 23 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 20 ) ],
"loop": false,
"name": "default",
"speed": 18.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 15 ), ExtResource( 23 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 20 ) ],
"loop": false,
"name": "default",
"speed": 18.0
} ]

[node name="Boss" instance=ExtResource( 1 )]
collision_layer = 64
script = ExtResource( 2 )
MOVE_SPEED = 60
bonus_letters = 0

[node name="CollisionShape2D" parent="." index="0"]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Shadow" parent="." index="1"]
position = Vector2( 0, 110 )
scale = Vector2( 15, 5 )

[node name="AnimatedSprite" parent="." index="5"]
scale = Vector2( 4, 4 )
frames = SubResource( 6 )
frame = 2
playing = true

[node name="Label" type="RichTextLabel" parent="." index="6"]
margin_left = -500.0
margin_top = -170.0
margin_right = 500.0
margin_bottom = -20.0
custom_fonts/bold_font = SubResource( 7 )
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[center][color=blue]BLUE[/color][color=white][wave amp=20 freq=7]what[/wave]KITA[/color][/center]"
text = "BLUEwhatKITA"

[node name="AnimatedSprite2" type="AnimatedSprite" parent="." index="8"]
visible = false
position = Vector2( 0, 50 )
scale = Vector2( 2.5, 2.5 )
z_index = 19
frames = SubResource( 10 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="." index="9"]
visible = false
position = Vector2( 50, -30 )
scale = Vector2( 2, 2 )
z_index = 10
frames = SubResource( 11 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="." index="10"]
visible = false
scale = Vector2( 1.5, 1.5 )
z_index = 10
frames = SubResource( 12 )

[connection signal="animation_finished" from="AnimatedSprite3" to="." method="_on_AnimatedSprite3_animation_finished"]
